--- a/index.html
+++ b/index.html
@@ -41,7 +41,19 @@
         </main>
         
         <footer>
-
+            <section class="finale">
+                <div class="fine"></div>
+                <div class="lista"></div>
+                <div class="lista"></div>
+                <div class="lista"></div>
+                <div class="lista"></div>
+            </section>
+            <hr>
+            <section class="altro-nav">
+                logo(img)
+                
+                bottone
+            </section>
         </footer>
 
     </body>
