--- a/index.html
+++ b/index.html
@@ -11,13 +11,24 @@
 
         <header>
             <nav>
-                logo(img)
-                link(a*5)
-                bottone
+                <img src="./img/logo.svg" alt="Logo Discord">
+                <section>
+                    <a href="#">Scarica</a>
+                    <a href="#">Perchè Discord</a>
+                    <a href="#">Nitro</a>
+                    <a href="#">Sicurezza</a>
+                    <a href="#">Assistenza</a>
+                </section>
+                <button class="accedi">Accedi</button>
             </nav>
 
             <section>
-                <div class="paragrafo">paragrafo</div>
+                <div class="paragrafo">
+                    <h1>Il tuo posto per parlare</h1>
+                    <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    <button class="scarica">&#8595; Scarica per Mac</button>
+                    <button class="apri-browser">Apri nel tuo browser</button>
+                </div>
             </section>
         </header>
         
