inserimento contenuti main

--- a/index.html
+++ b/index.html
@@ -19,36 +19,57 @@
                     <a href="#">Sicurezza</a>
                     <a href="#">Assistenza</a>
                 </section>
-                <button class="accedi">Accedi</button>
+                <button class="Accedi">Accedi</button>
             </nav>
 
             <section>
                 <div class="paragrafo">
                     <h1>Il tuo posto per parlare</h1>
-                    <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    <p class="frase-header">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                     <button class="scarica">&#8595; Scarica per Mac</button>
-                    <button class="apri-browser">Apri nel tuo browser</button>
+                    <button class="apri-browser">Apri Discord nel tuo browser</button>
                 </div>
             </section>
         </header>
         
         <main>
             <section class="contenuto">
-                <div class="blu"></div>
-                <div class="rosa"></div>
+                <div class="img">
+                <img  src="./img/item1.svg" alt="item1">
+                </div>
+                <div class="frase">
+                <h2 class="titoletto">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                <p>I server Discord sono organizzati in canali tematici in cui collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
+                </div>
             </section>
             <hr>
             <section class="contenuto2">
-                <div class="blu"></div>
-                <div class="rosa"></div>
+                <div class="img">
+                    <img src="./img/item2.svg" alt="item2">
+                </div>
+                <div class="frase">
+                    <h2 class="titoletto">Dove trovarsi è facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza odver chiamare.</p>
+                </div>
             </section>
             <hr>
             <section class="contenuto">
-                <div class="blu"></div>
-                <div class="rosa"></div>
+                <div class="img">
+                    <img src="./img/item3.svg" alt="item3">
+                </div>
+                <div class="frase">
+                    <h2 class="titoletto">Da pochi a un fandom</h2>
+                    <p>Dai inizio alla community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+                </div>
             </section>
             <hr>
-            <div class="verde">paragrafo piu immagini</div>
+            <section class="ultima-parte">
+                <h2 class="titoletto">Tecnologia affidabile per tenersi in contatto</h2>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione dello schermo.</p>
+                <img src="./img/item4-big.svg" alt="item4">
+                <h3 class="titolo-speciale">Pronti a iniziare la tua avventura?</h3>
+                <button class="scarica">&#8595; Scarica per Mac</button>
+            </section>
         </main>
         
         <footer>
