inserimento contenuti footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="#">Sicurezza</a>
                     <a href="#">Assistenza</a>
                 </section>
-                <button class="Accedi">Accedi</button>
+                <button class="accedi">Accedi</button>
             </nav>
 
             <section>
@@ -68,23 +68,68 @@
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione dello schermo.</p>
                 <img src="./img/item4-big.svg" alt="item4">
                 <h3 class="titolo-speciale">Pronti a iniziare la tua avventura?</h3>
-                <button class="scarica">&#8595; Scarica per Mac</button>
+                <button class="scarica2">&#8595; Scarica per Mac</button>
             </section>
         </main>
         
         <footer>
             <section class="finale">
-                <div class="fine"></div>
-                <div class="lista"></div>
-                <div class="lista"></div>
-                <div class="lista"></div>
-                <div class="lista"></div>
+                <div class="fine">
+                    <h4>Il tuo posto per parlare</h4>
+                    <img class="foto-finale" src="./img/ita.png" alt="bandiera italiana"> <span>Italiano &#8744;</span>
+
+                </div>
+                <div class="lista">
+                    <ul>
+                        <li class="primo-lista">Prodotto</li>
+                        <li>Scarica</li>
+                        <li>Perchè Discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                    </ul>
+                </div>
+                <div class="lista">
+                    <ul>
+                        <li class="primo-lista">Compagnia</li>
+                        <li>Chi siamo</li>
+                        <li>Lavora con noi</li>
+                        <li>Marchio</li>
+                        <li>Redazione</li>
+                        <li>Negiozio</li>
+                    </ul>
+                </div>
+                <div class="lista">
+                    <ul>
+                        <li class="primo-lista">Risorse</li>
+                        <li>Assistenza</li>
+                        <li>Scarica</li>
+                        <li>Perchè Discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                        <li>Scarica</li>
+                        <li>Perchè Discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                    </ul>
+                </div>
+                <div class="lista">
+                    <ul>
+                        <li class="primo-lista">Norme</li>
+                        <li>Scarica</li>
+                        <li>Perchè Discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                    </ul>
+                </div>
             </section>
-            <hr>
+
             <section class="altro-nav">
-                logo(img)
-                
-                bottone
+                <img src="./img/logo.svg" alt="logo Discord">                
+                <button class="registrati">Registrati</button>
             </section>
         </footer>
 
