piccola modifica, primo risultato finale

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </section>
             <hr>
             <section class="ultima-parte">
-                <h2 class="titoletto">Tecnologia affidabile per tenersi in contatto</h2>
+                <h2 class="titoletto2">Tecnologia affidabile per tenersi in contatto</h2>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione dello schermo.</p>
                 <img src="./img/item4-big.svg" alt="item4">
                 <h3 class="titolo-speciale">Pronti a iniziare la tua avventura?</h3>
