piccole sistemazioni codice html e css(piccoli cambiamenti,indentazione e ragruppamento css)

--- a/index.html
+++ b/index.html
@@ -19,32 +19,32 @@
                     <a href="#">Sicurezza</a>
                     <a href="#">Assistenza</a>
                 </section>
-                <button class="accedi">Accedi</button>
+                <button class="bottone accedi">Accedi</button>
             </nav>
 
             <section>
                 <div class="paragrafo">
                     <h1>Il tuo posto per parlare</h1>
                     <p class="frase-header">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
-                    <button class="scarica">&#8595; Scarica per Mac</button>
-                    <button class="apri-browser">Apri Discord nel tuo browser</button>
+                    <button class="bottone scarica">&#8595; Scarica per Mac</button>
+                    <button class="bottone apri-browser">Apri Discord nel tuo browser</button>
                 </div>
             </section>
         </header>
         
         <main>
             <section class="contenuto">
-                <div class="img">
-                <img  src="./img/item1.svg" alt="item1">
+                <div class="immagine">
+                    <img  src="./img/item1.svg" alt="item1">
                 </div>
                 <div class="frase">
-                <h2 class="titoletto">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-                <p>I server Discord sono organizzati in canali tematici in cui collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
+                    <h2 class="titoletto">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in canali tematici in cui collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
                 </div>
             </section>
             <hr>
             <section class="contenuto2">
-                <div class="img">
+                <div class="immagine">
                     <img src="./img/item2.svg" alt="item2">
                 </div>
                 <div class="frase">
@@ -54,7 +54,7 @@
             </section>
             <hr>
             <section class="contenuto">
-                <div class="img">
+                <div class="immagine">
                     <img src="./img/item3.svg" alt="item3">
                 </div>
                 <div class="frase">
@@ -68,20 +68,20 @@
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione dello schermo.</p>
                 <img src="./img/item4-big.svg" alt="item4">
                 <h3 class="titolo-speciale">Pronti a iniziare la tua avventura?</h3>
-                <button class="scarica2">&#8595; Scarica per Mac</button>
+                <button class="bottone scarica2">&#8595; Scarica per Mac</button>
             </section>
         </main>
         
         <footer>
             <section class="finale">
                 <div class="fine">
-                    <h4>Il tuo posto per parlare</h4>
-                    <img class="foto-finale" src="./img/ita.png" alt="bandiera italiana"> <span>Italiano &#8744;</span>
+                    <h4 class="colore-scritte">Il tuo posto per parlare</h4>
+                    <img class="foto-finale" src="./img/ita.png" alt="bandiera italiana"> Italiano &#8744;
 
                 </div>
                 <div class="lista">
                     <ul>
-                        <li class="primo-lista">Prodotto</li>
+                        <li class="colore-scritte">Prodotto</li>
                         <li>Scarica</li>
                         <li>Perchè Discord</li>
                         <li>Nitro</li>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="lista">
                     <ul>
-                        <li class="primo-lista">Compagnia</li>
+                        <li class="colore-scritte">Compagnia</li>
                         <li>Chi siamo</li>
                         <li>Lavora con noi</li>
                         <li>Marchio</li>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="lista">
                     <ul>
-                        <li class="primo-lista">Risorse</li>
+                        <li class="colore-scritte">Risorse</li>
                         <li>Assistenza</li>
                         <li>Scarica</li>
                         <li>Perchè Discord</li>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="lista">
                     <ul>
-                        <li class="primo-lista">Norme</li>
+                        <li class="colore-scritte">Norme</li>
                         <li>Scarica</li>
                         <li>Perchè Discord</li>
                         <li>Nitro</li>
@@ -129,7 +129,7 @@
 
             <section class="altro-nav">
                 <img src="./img/logo.svg" alt="logo Discord">                
-                <button class="registrati">Registrati</button>
+                <button class="bottone registrati">Registrati</button>
             </section>
         </footer>
 
