ultimi cambiamenti css html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="paragrafo">
                     <h1>Il tuo posto per parlare</h1>
                     <p class="frase-header">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
-                    <button class="bottone scarica">&#8595; Scarica per Mac</button>
+                    <button class="bottone scarica"> <span class="freccia-giu">&#8595;</span> Scarica per Mac</button>
                     <button class="bottone apri-browser">Apri Discord nel tuo browser</button>
                 </div>
             </section>
@@ -64,11 +64,13 @@
             </section>
             <hr>
             <section class="ultima-parte">
-                <h2 class="titoletto2">Tecnologia affidabile per tenersi in contatto</h2>
-                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione dello schermo.</p>
-                <img src="./img/item4-big.svg" alt="item4">
+                <div class="blocco-finale">
+                    <h2 class="titoletto2">Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione dello schermo.</p>
+                    <img src="./img/item4-big.svg" alt="item4">
+                </div>
                 <h3 class="titolo-speciale">Pronti a iniziare la tua avventura?</h3>
-                <button class="bottone scarica2">&#8595; Scarica per Mac</button>
+                <button class="bottone scarica2"> <span class="freccia-giu">&#8595;</span> Scarica per Mac</button>
             </section>
         </main>
         
@@ -76,7 +78,7 @@
             <section class="finale">
                 <div class="fine">
                     <h4 class="colore-scritte">Il tuo posto per parlare</h4>
-                    <img class="foto-finale" src="./img/ita.png" alt="bandiera italiana"> Italiano &#8744;
+                    <img class="foto-finale" src="./img/ita.png" alt="bandiera italiana"> Italiano <span class="freccina">&#8744;</span>
 
                 </div>
                 <div class="lista">
